[gd_scene load_steps=3 format=3 uid="uid://dshbthhxymj2b"]

[ext_resource type="Script" path="res://ui/nav_bar.gd" id="1_0psb7"]
[ext_resource type="FontFile" uid="uid://c780w3p5m5wq7" path="res://ui/fonts/Kenney Pixel.ttf" id="1_1midu"]

[node name="NavBar" type="PanelContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_0psb7")

[node name="Content" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="BtnPrev" type="Button" parent="Content"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_1midu")
theme_override_font_sizes/font_size = 32
text = "PREV
<<"

[node name="AreaInfo" type="VBoxContainer" parent="Content"]
layout_mode = 2

[node name="AreaName" type="Label" parent="Content/AreaInfo"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_1midu")
theme_override_font_sizes/font_size = 48
text = "AREA"
horizontal_alignment = 1

[node name="BtnTitle" type="Button" parent="Content/AreaInfo"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_1midu")
theme_override_font_sizes/font_size = 32
text = "Quit to Title"

[node name="BtnNext" type="Button" parent="Content"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_1midu")
theme_override_font_sizes/font_size = 32
text = "NEXT
>>"

[connection signal="pressed" from="Content/BtnPrev" to="." method="_on_btn_prev_pressed"]
[connection signal="pressed" from="Content/AreaInfo/BtnTitle" to="." method="_on_btn_title_pressed"]
[connection signal="pressed" from="Content/BtnNext" to="." method="_on_btn_next_pressed"]
